--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "vue/dist/vue.common.js"
   },
   "dependencies": {
+    "element-ui": "^2.7.0",
     "vue": "^2.0.1"
   },
   "devDependencies": {
